@@ -16,7 +16,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="${PYTHON_DEPS}"
-DEPEND="${RDEPEND}"
+DEPEND="${PYTHON_DEPS}"
+RDEPEND="${DEPEND}"
 
 S="${WORKDIR}/${PN}"
