@@ -18,5 +18,5 @@ SLOT="0"
 KEYWORDS=""
 IUSE=""
 
-RDEPEND="${PYTHON_DEPS}"
-DEPEND="${RDEPEND}"
+DEPEND="${PYTHON_DEPS}"
+RDEPEND="${DEPEND}"
