@@ -1,3 +1,7 @@
+  27 Mar 2014; Alon Bar-Lev <alonbl@redhat.com>
+  ovirt-engine-sdk-python-3.4.0.6.ebuild, ovirt-engine-sdk-python-9999.ebuild:
+  Version bump + rename
+
   03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> metadata.xml,
   ovirt-engine-sdk-3.2.0.8.ebuild, ovirt-engine-sdk-9999.ebuild:
   fixup
